# pi-pool

./: .gitignore  .mcp.json  .tool-versions  CLAUDE.md  Makefile  Makefile.test  README.md  alembic.ini  config.json.example  config.sim.json.example  mqtt_listen_to_pipool_sensors  pyproject.toml  pytest.ini  requirements-test.txt  run  schema.sql  start
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_event_opaque_to_json.py
docs/: HAL.md  HOMEASSISTANT.md  README.md
docs/hardware/: Hardware-DIY.md
docs/research/: github-release-readiness-analysis-2026-01-06.md
src/: Automations.py  Config.py  DB.py  Event.py  Heater.py  HeaterMode.py  HeaterState.py  Light.py  LightColorLogic.py  LightState.py  Log.py  MessageBus.py  Pinger.py  Pump.py  PumpMode.py  PumpSpeed.py  PumpSpeedControl.py  PumpState.py  RelayBlock.py  RpiTemperature.py  Sensor.py  Sensors.py  Thermometer.py  Timer.py  Watchdog.py  pipool.py
src/db/: Base.py  Engine.py  __init__.py
src/hal/: HardwareFactory.py  README.md  __init__.py
streamlit_app/: .gitignore  QUICKSTART.md  README.md  UI_GUIDE.md  app.py  mqtt_client.py  pyproject.toml  requirements.txt  run_streamlit.sh  test_mqtt_connection.py  verify_installation.sh
streamlit_app/.streamlit/: config.toml
tests/: QUICKSTART.md  README.md  __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_automations.py  test_opaque_json_fix.py  test_opaque_json_integration.py  test_sqlalchemy.py  test_thermal_simulation.sh
tests/safety/: __init__.py  test_hal_integration.sh  test_heater_runtime.py  (+3 more)
(+41 files in other folders)
